k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: rcc-londrina-front
  namespace: rcc-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rcc-londrina-front
  template:
    metadata:
      labels:
        app: rcc-londrina-front
    spec:
      containers:
        - name: rcc-londrina-front
          image: williambr2022/rcc-londrina-front
          ports:
            - containerPort: 80
          imagePullPolicy: Always
