k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  namespace: rcc-manager
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-rcc-londrina"
spec:
  tls:
  - hosts:
    - "rcc-londrina.api-danweb-softwares.click"
    secretName: "rcc-londrina-tls"
  - hosts:
    - "rcc-londrina.app-danweb-softwares.click"
    secretName: "rcc-londrina-front-tls"
  rules:
  - host: rcc-londrina.api-danweb-softwares.click
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rcc-londrina-back-svc
            port: 
              number: 80
  - host: rcc-londrina.app-danweb-softwares.click
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rcc-londrina-front-svc
            port: 
              number: 80
